--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -25,7 +25,7 @@
        {% from "warning-text/macro.njk" import govukWarningText %}
 
        {{ govukWarningText({
-         text: "At any point, if you need to go back to the previous page, DO NOT use the back button of your browser or your device. You would have to start all over again. You can use the back link on each page instead",
+         text: "Use the back link if you need to go to the previous page. Don't use the back button of your browser or device or you'll need to start again.",
          iconFallbackText: "Warning"
        }) }}
 
