--- a/app/views/forms/education/declaration1-error.html
+++ b/app/views/forms/education/declaration1-error.html
@@ -29,7 +29,7 @@ Error -  Declaration
               }
             },
             errorMessage: {
-              text: "You need to confirm each statement by checking it"
+              text: "You need to check all boxes to start the application "
             },
             items: [
               {
@@ -59,11 +59,6 @@ Error -  Declaration
       </form>
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>This is new content - needs to be signed off by Education</p>
-    <p>We need content for an error message - just a place holder for now</p>
-    <p>To see an <a href="/forms/education/declaration.html">alternative with radio buttons</a></p>
-</div>
+
 
 {% endblock %}
