--- a/app/views/forms/education/declaration1.html
+++ b/app/views/forms/education/declaration1.html
@@ -56,11 +56,11 @@
       </form>
     </div>
 </div>
-<div class="design-notes-box">
+<!--div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <p>This is new content - needs to be signed off by Education</p>
     <p>We need content for an error message - just a place holder for now</p>
     <p>To see an <a href="/forms/education/declaration.html">alternative with radio buttons</a></p>
-</div>
+</div-->
 
 {% endblock %}
