--- a/app/views/forms/education/info1.html
+++ b/app/views/forms/education/info1.html
@@ -13,11 +13,11 @@
             Apply online for primary 1 - August 2019
         </h1>
         
-        <p><strong>We can’t guarantee a place at your catchment school.</strong></p> 
+        <p><strong>Sometimes more children apply to a school than we have places for.</strong></p> 
 
-        <p><strong>We need to ask for extra information in case we need to prioritise places.</strong></p> 
+        <p><strong>If this happens we allocate places by priority. We now need to ask for extra information to find out more about your circumstances.</strong></p> 
         
-        <p><strong>We’ll ask for proof of details you give.</strong></p>
+        <p><strong>We ask for proof of any information you give us.</strong></p>
 
 
       {{ govukButton({
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="alt-notes-box">
-    <p><a href="/forms/education/info1.html"><strong>alternative screen</strong></a></p>
+    <p><a href="/forms/education/info.html"><strong>first screen</strong></a></p>
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
