--- a/app/views/forms/education/moving-date.html
+++ b/app/views/forms/education/moving-date.html
@@ -66,7 +66,7 @@
     <h3 class="govuk-heading-s">Design notes:</h3>
     <p>The date should be validated. If it's not correct, only one error message should be displayed</p>
     <ul class="govuk-list govuk-list--number">
-      <li>check the 3 fields have been completed, if not, error is: Enter the date you are moving into your new address</li>
+      <li>check the 3 fields have been completed, if not, error is: Enter date move into new address</li>
       <li>check if the date is valid date (for example: no 31 of April), if not, error is: The date is not valid</li> 
       <li>check the date is after the day they apply, but not deadline in the future, it can be after the start of the term.</li>
   </ul>
