--- a/app/views/forms/education/nursery.html
+++ b/app/views/forms/education/nursery.html
@@ -139,11 +139,10 @@
         }) }}
 
       </form>
-      <div class="design-notes-box">
+      <!--div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>New content</p>
           <p>To view the same content but <a href="/forms/education/nursery1.html"><strong>with a dropdown list</strong></a></p>
-      </div>
+      </div-->
     </div>
 </div>
 
