--- a/app/views/forms/education/moving.html
+++ b/app/views/forms/education/moving.html
@@ -46,8 +46,8 @@
       </form>
     </div>
 </div>
-<div class="design-notes-box">
+<!--div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <p>new content</p>
-</div>
+</div-->
 {% endblock %}
