--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -40,7 +40,7 @@
         "text": "Find my address"
         }) }}
       </form>
-      <p>If you don't have a postcode, please phone the Education Admissions Team on 0141 577 3246 for advice.</p>
+      <!--p>If you don't have a postcode, please phone the Education Admissions Team on 0141 577 3246 for advice.</p-->
 
     <!--p><a href="manual-address.html">My postcode is not recognised</a></p-->
     <div class="design-notes-box">
@@ -48,7 +48,7 @@
         <ul class="govuk-list govuk-list--bullet">
           <li>Has to be an ERC postcode</li>
           <li>Maidenhill is not treated differently</li>
-          <li>If the address is not found (new houses in ERC), we will have the same message for everyone: <strong>"Unfortunately, we cannot find your address. Please phone the Education Admissions Team on 0141 577 3246 for advice."</strong> to see it, enter 'error'</li>
+          <li>If the address is not found (new houses in ERC), we will have the same message for everyone: <strong>NEW: </strong>"We cannot find your address. Please phone us 0141 577 3246." to see it, enter 'error'</li>
           <li>If a user has no postcode to enter, we should display a message so they know they should call us</li>
           <li>We should also have a specific message if the user doesn't have Javascript enabled as they won't be able to go further. <a href="/forms/education/postcode-js.html"><strong>See an example.</strong></a></li>
         </ul>
