add more changes to P1 form

--- a/app/views/forms/education/medical-details.html
+++ b/app/views/forms/education/medical-details.html
@@ -20,7 +20,7 @@
           id: "more-detail",
           value: data['more-detail'],
           label: {
-            text: "Give details of their medical condition",
+            text: "Tell us about the medical condition and how the school can support it",
             classes: "govuk-!-font-size-27"
           }
         }) }}
