--- a/app/views/forms/education/medical-evidence.html
+++ b/app/views/forms/education/medical-evidence.html
@@ -17,12 +17,12 @@
 
       {{ govukRadios({
         classes: "govuk-radios",
-        idPrefix: "medical",
-        name: "medical",
-        value: data['medical'],
+        idPrefix: "medical-evidence",
+        name: "medical-evidence",
+        value: data['medical-evidence'],
         fieldset: {
           legend: {
-            text: "Does your child have a medical condition only this school can support?",
+            text: "Do you have evidence from a medical professional? ",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
