--- a/app/views/forms/education/sibling-stage.html
+++ b/app/views/forms/education/sibling-stage.html
@@ -13,6 +13,7 @@
             Apply online for primary 1 - August 2019
         </h1>
       <form class="form" method="post">
+         
         {% from "radios/macro.njk" import govukRadios %}
 
         {{ govukRadios({
@@ -21,10 +22,13 @@
           name: "sibling-stage",
           fieldset: {
             legend: {
-              text: "What primary are they in?",
+              text: "What primary will they be in August 2019?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
+          },
+          hint: {
+            text: "If you’ve more than one child tell us about the youngest."
           },
           items: [
             {
@@ -66,7 +70,7 @@
         </form>
         <div class="design-notes-box">
             <h3 class="govuk-heading-s">Design notes:</h3>
-            <p><strong>New content - Sharon is rewording and asking about the stage now (as opposed to "when school starts") - need to be agreed by Education</strong></p>
+            <p><strong>New content - need to be agreed by Education</strong></p>
             <p>Term "they" might be confusing for parents who have more than one kid at school, as they won't be able to enter more than one stage in the list</p>
             <p>As we have removed the term 'older' in the previous pages, we can now have the option of P1 in the list for the parents of twins, to make sure they are not stuck on this question.</p>
             <p>question will need to be re-worded as previous one to make sure the sibling is at the school when the P1 starts - Heather</p>
