--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -22,7 +22,7 @@
         value: data['sibling'],
         fieldset: {
           legend: {
-            text: "Do you have another child at the school?",
+            text: "Will you have another child at the school in August 2019?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -46,8 +46,7 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>New content - not agreed yet by Education - Asking about the actual situation, seems easier to understand than asking about projecting the situation at the start of the term, The term Sibling used later might not make sense then?</p>   
-          <p>Also for children in P7, Education would rather not have that data coming to them at all.... so would prefer to consider stage at the start of the term instead of now</p> 
+          <p>New content - not agreed yet by Education </p>   
       </div>
     </div>
 </div>
