--- a/app/views/forms/education/single-details.html
+++ b/app/views/forms/education/single-details.html
@@ -20,7 +20,7 @@ Single parent or carer details
           id: "single-detail",
           value: data['single-detail'],
           label: {
-            text: "Give details of how it helps childcare",
+            text: "Tell us how it benefits your child’s care to go to this school",
             classes: "govuk-!-font-size-27"
           }
         }) }}
