more changes to P1

--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -12,16 +12,48 @@
       <h1 class="govuk-heading-l">
           Apply online for primary 1 - August 2019
       </h1>
+      <p>This a 2 stage process. You must apply online by 11 January 2019. We’ll then ask you to take proof of your details the school between 14 and 18 January 2019.</p>
+
+      <h2 class="govuk-heading-m govuk-!-margin-top-6" style="color: #0071AB">Step 1: Apply online</h2>
 
       <h2 class="govuk-heading-m">Before you start</h2>
       <ul class="govuk-list govuk-list--bullet">
-          <li>you should read the admissions policy</li> 
+          <li>you should <a href="#">read the admissions policy</a></li> 
           <li>you can only apply to your catchment school</li>
-          <li>you still need to apply to your catchment school if you make a placing request, move house or defer entry</li>
-          <li>you need to provide proof of your details at a later date</li>
+          <li>you still need to apply to your catchment school if you <a href="#">make a placing request</a>, later move house or <a href="#">defer entry</a></li>
+          <li>closing date is 11 January 2019 at 4pm</li>
        </ul>
-       <p class="govuk-!-padding-top-4">You can find out how we use your information in our <a href="/privacy.html">privacy statement</a>.</p>
+      
+       <h2 class="govuk-heading-m govuk-!-margin-top-6" style="color: #0071AB">Step 2: Provide proof of details</h2>
+       <p><strong>Date:</strong> From 14 to 18 January 2019</p>
+       <p><strong>Time:</strong> Between 1.45pm and 3.30pm</p>
+       <p><strong>Place:</strong> School office</p>
+        <p>You don’t need to make an appointment. </p>
+        <p><strong>Documents you need to bring</strong></p>
+        <p>These must be original documents. School office staff will take a copy and return them.</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>Child's birth certificate</li>
+            <li>Current Council Tax notice</li>
+            <li>Roman Catholic baptism certificate (if applying to a Roman Catholic school)</li>
+            <li>Mortgage statement or rent agreement covering the last year</li>
+            <li>Child Benefit statement</li>
+            <li>If you don’t get Child Benefit, you can bring a Driving licence, utility bill or bank statement</li> 
+        </ul>
 
+        <h2 class="govuk-heading-m govuk-!-margin-top-6" style="color: #0071AB">When you’ll hear from us </h2>
+        <p>We’ll write to you by 31 March 2019.</p>
+        
+        <h2 class="govuk-heading-m" style="color: #0071AB">Contact</h2>
+        <p>Phone: 0141 577 3246</p>
+        <p>Email: admissions@eastrenfrewshire.gov.uk</p>
+
+        <h2 class="govuk-heading-m govuk-!-margin-top-6" style="color: #0071AB">Related information </h2>
+          <p><a href="#">Make a placing request</a></p>
+          <p><a href="#">Defer your child starting school</a></p>
+          <p><a href="#">How to apply for other primary stages</a></p>
+
+
+       <p class="govuk-!-padding-top-4">You can find out how we use your information in our <a href="/privacy.html">privacy statement</a>.</p>
        {% from "warning-text/macro.njk" import govukWarningText %}
 
        {{ govukWarningText({
