--- a/app/views/forms/education/school-1st.html
+++ b/app/views/forms/education/school-1st.html
@@ -28,12 +28,12 @@
         },
         items: [
           {
-            value: "Saint school example (denominational)",
-            text: "Saint school example (denominational)"
+            value: "School example (denominational)",
+            text: "Example school 1 (denominational)"
           },
           {
             value: "School example (non denominational)",
-            text: "School example (non denominational)"
+            text: "Example school 2 (non denominational)"
           }
         ]
       }) }}
