--- a/app/views/forms/education/info-2nd-school.html
+++ b/app/views/forms/education/info-2nd-school.html
@@ -12,7 +12,9 @@
         <h1 class="govuk-heading-l">
             Apply online for primary 1 - August 2019
         </h1>
-            <p class="govuk-!-margin-bottom-6">If your child’s catchment school is full:</p>
+
+        <h2 class="govuk-heading-m govuk-!-margin-top-9">If your child’s catchment school is full:</h2>
+           
 
             <p><strong>Preferred alternative school</strong></p>
             <p class="govuk-!-margin-bottom-6">They’ll register at the alternative school you choose. This is permanent.</p>
