--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -32,18 +32,26 @@
         <!--p>If you don't receive our email in the next 5 minutes, please check your SPAM folder.</p-->
     <p>&nbsp;</p>
 
-
+    {% if data['defer'] === 'yes' %}
+    {{ govukButton({
+      text: "Find out the next steps when you defer",
+      href: "/forms/education/P1-start.html",
+      classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+    }) }}
+    {% else %}
     {{ govukButton({
       text: "Find out the next steps of the application process",
       href: "/forms/education/P1-start.html",
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
     }) }}
+    {% endif %}
 
     </div>
   </div>
   <div class="alt-notes-box">
       <h3 class="govuk-heading-s">Design notes:</h3>
       <ul class="govuk-list govuk-list--bullet">
+          <p><a href="/forms/education/confirmation1.html"><strong>see with an email</strong></a></p>
       </ul>
   </div>
 {% endblock %}
