fix typos for P1 start page

--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-l">
           Apply online for primary 1 - August 2019
       </h1>
-      <p>This a 2 stage process. You must apply online by 11 January 2019. We’ll then ask you to take proof of your details the school between 14 and 18 January 2019.</p>
+      <p>This a 2 stage process. You must apply online by 11 January 2019. We’ll then ask you to take proof of your details to the school between 14 and 18 January 2019.</p>
 
       <h2 class="govuk-heading-m govuk-!-margin-top-6" style="color: #0071AB">Step 1: Apply online</h2>
 
@@ -45,12 +45,12 @@
         <p><strong>Documents you need to bring</strong></p>
         <p>These must be original documents. School office staff will take a copy and return them.</p>
         <ul class="govuk-list govuk-list--bullet">
-            <li>Child's birth certificate</li>
-            <li>Current Council Tax notice</li>
+            <li>child's birth certificate</li>
+            <li>current Council Tax notice</li>
             <li>Roman Catholic baptism certificate (if applying to a Roman Catholic school)</li>
-            <li>Mortgage statement or rent agreement covering the last year</li>
+            <li>mortgage statement or rent agreement covering the last year</li>
             <li>Child Benefit statement</li>
-            <li>If you don’t get Child Benefit, you can bring a Driving licence, utility bill or bank statement</li> 
+            <li>if you don’t get Child Benefit, you can bring a Driving licence, utility bill or bank statement</li> 
         </ul>
 
         <h2 class="govuk-heading-m govuk-!-margin-top-6" style="color: #0071AB">When you’ll hear from us </h2>
